se aseguro flujo correcto de tokens, asi como almacenamiento en redis de lista negra